# Game-of-life

./: 1.py  README.md  main.py  pyproject.toml
src/game_of_life/: __init__.py  main.py  util.py
