[project]
name = "game-of-life"
version = "0.1.0"
description = "Implementation of Conway's Game of Life"
authors = [
    {name = "random2907",email = "yarnjeetyadav1234567890@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt6 (>=6.9.1,<7.0.0)",
]

[tool.poetry]

[tool.poetry.scripts]
game-of-life = "game_of_life.main:main"

[tool.poetry.group.dev.dependencies]
pyqt6 = "^6.9.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
